# rev

./: 123.php  1234.php  app.py  cron_logs.php  dirtycow_netfilter.txt  exp.py  exp32250.txt  expl.php  exploit.cpp  exploit1.cpp  exploit1.php  index.php  index1.php  login.php  malicious.dtd  me.php  panel.sh  pwnkit_gconv.py  pyproject.toml  refer.html  restore_exploit.sh  revshell.py  shell.py  shell.sh  test.yml
