[project]
name = "mshp-web-idor-1"
version = "0.0.1"
description = "change description please"
authors = [{ name = "Marcus", email = "marcus@marcus.ru" }]
requires-python = ">= 3.12"

dependencies = [
    "fastapi>=0.115.6",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.19",
    "uvicorn>=0.32.1",
]

[project.optional-dependencies]


[dependency-groups]
dev = ["ruff", "black"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 120
fix = false

[tool.black]
line-length = 120
target-version = ['py312']